--- a/source-code/frontend/src/shared/ui/fields/checkbox/ui/Checkbox.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/checkbox/ui/Checkbox.module.scss
@@ -2,6 +2,7 @@
 @use "@/styles/mixins/mixins";
 @use "@/styles/mixins/typography";
 @use "@/styles/mixins/transition";
+@use "@/styles/mixins/interaction";
 
 .label {
 	position: relative;
@@ -12,7 +13,7 @@
 	width: fit-content;
 	@include typography.additional-text;
 
-	@include mixins.hover-wrapper {
+	@include interaction.hover {
 		.input {
 			border-color: var(--color-checkbox-border-hover);
 		}
@@ -40,11 +41,11 @@
 		border-color: var(--color-alert) !important;
 	}
 
-	&:focus-visible {
+	@include interaction.keyboard-focus {
 		border-color: var(--color-checkbox-border-focused);
 	}
 
-	&:disabled {
+	@include interaction.disabled {
 		background-color: var(--bg-checkbox-disabled) !important;
 		border-color: var(--color-checkbox-border) !important;
 		cursor: not-allowed !important;
