--- a/source-code/frontend/src/shared/styles/common.scss
+++ b/source-code/frontend/src/shared/styles/common.scss
@@ -1,5 +1,6 @@
 @use "@/styles/functions/convert";
 @use "@/styles/mixins/typography";
+@use "@/styles/mixins/interaction";
 
 html {
 	scroll-padding-top: calc(var(--header-height-number) * 1px);
@@ -93,7 +94,7 @@ button {
 
 a,
 button {
-	&:focus-visible {
+	@include interaction.keyboard-focus {
 		outline: 2px solid var(--color-outline-focus) !important;
 		outline-offset: 1px;
 	}
