--- a/source-code/frontend/src/shared/ui/social/ui/Social.module.scss
+++ b/source-code/frontend/src/shared/ui/social/ui/Social.module.scss
@@ -1,6 +1,7 @@
 @use "@/styles/functions/convert";
 @use "@/styles/mixins/mixins";
 @use "@/styles/mixins/transition";
+@use "@/styles/mixins/interaction";
 
 .block {
 	display: flex;
@@ -19,12 +20,12 @@
 	@include mixins.flex-center;
 	@include transition.create(background-color, color);
 
-	@include mixins.hover-wrapper {
+	@include interaction.hover {
 		background-color: var(--bg-button-1-hover);
 		color: var(--fg-button-1-hover);
 	}
 
-	@include mixins.active-wrapper {
+	@include interaction.active {
 		background-color: var(--bg-button-1-active);
 		color: var(--fg-button-1-active);
 	}
