--- a/source-code/frontend/src/shared/ui/buttons/burger/ui/BurgerButton.module.scss
+++ b/source-code/frontend/src/shared/ui/buttons/burger/ui/BurgerButton.module.scss
@@ -4,7 +4,7 @@
 .button {
 	width: convert.to-rem(24);
 	height: convert.to-rem(24);
-	@include mixins.flex-center();
+	@include mixins.flex-center;
 
 	@include mixins.hover-opacity;
 }
