--- a/source-code/frontend/src/shared/ui/buttons/close/ui/CloseButton.module.scss
+++ b/source-code/frontend/src/shared/ui/buttons/close/ui/CloseButton.module.scss
@@ -5,7 +5,7 @@
 	width: convert.to-rem(24);
 	height: convert.to-rem(24);
 	flex-shrink: 0;
-	@include mixins.flex-center();
+	@include mixins.flex-center;
 
 	@include mixins.hover-opacity;
 
