--- a/source-code/frontend/src/shared/ui/fields/radio-button/ui/RadioButton.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/radio-button/ui/RadioButton.module.scss
@@ -74,6 +74,7 @@
 
 	&:checked {
 		border-color: var(--color-radio-border-focused);
+		background-color: var(--bg-radio-checked);
 	}
 
 	&:checked::before {
