--- a/source-code/frontend/src/shared/ui/fields/checkbox/ui/Checkbox.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/checkbox/ui/Checkbox.module.scss
@@ -61,11 +61,15 @@
 		top: 0;
 	}
 
-	&:checked::before {
-		border-radius: 0;
-		background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='11' height='10' viewBox='0 0 11 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M1 6.30088L2.2045 7.6785C2.869 8.43851 3.20125 8.81772 3.57325 8.93772C3.90025 9.04252 4.24825 9.01452 4.5595 8.85772C4.91425 8.67852 5.1985 8.24891 5.7685 7.3889L10 1' stroke='%230A1950' stroke-linecap='round' stroke-linejoin='round'/%3e%3c/svg%3e ");
-		background-repeat: no-repeat;
-		background-size: contain;
-		margin: convert.to-rem(3) convert.to-rem(3);
+	&:checked {
+		background-color: var(--bg-checkbox-checked);
+
+		&::before {
+			border-radius: 0;
+			background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='11' height='10' viewBox='0 0 11 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M1 6.30088L2.2045 7.6785C2.869 8.43851 3.20125 8.81772 3.57325 8.93772C3.90025 9.04252 4.24825 9.01452 4.5595 8.85772C4.91425 8.67852 5.1985 8.24891 5.7685 7.3889L10 1' stroke='%230A1950' stroke-linecap='round' stroke-linejoin='round'/%3e%3c/svg%3e ");
+			background-repeat: no-repeat;
+			background-size: contain;
+			margin: convert.to-rem(3) convert.to-rem(3);
+		}
 	}
 }
