--- a/source-code/frontend/src/shared/ui/tooltip/ui/Tooltip.module.scss
+++ b/source-code/frontend/src/shared/ui/tooltip/ui/Tooltip.module.scss
@@ -144,8 +144,9 @@
 }
 
 .icon {
-	min-width: convert.to-rem(24);
-	min-height: convert.to-rem(24);
+	width: convert.to-rem(24);
+	height: convert.to-rem(24);
+	overflow: hidden;
 
 	svg {
 		width: 100%;
