--- a/source-code/frontend/src/app/styles/default/root.scss
+++ b/source-code/frontend/src/app/styles/default/root.scss
@@ -97,6 +97,7 @@
 	--color-link-disabled: var(--color-gray-dark);
 
 	// scrollbar colors
+	--color-scrollbar-track: transparent;
 	--color-scrollbar-thumb: var(--color-gray-dark);
 
 	// input colors
