#refactor - test page

--- a/source-code/frontend/src/views/test/ui/wrapper/TestPageWrapper.module.scss
+++ b/source-code/frontend/src/views/test/ui/wrapper/TestPageWrapper.module.scss
@@ -1,5 +1,13 @@
 @use "@/styles/functions/convert";
 
+.layout {
+	&:last-child {
+		.block {
+			border: none;
+		}
+	}
+}
+
 .block {
 	width: 100%;
 	padding: convert.to-rem(50) 0;
