#change - fields disabled style

--- a/source-code/frontend/src/shared/ui/fields/textarea/ui/Textarea.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/textarea/ui/Textarea.module.scss
@@ -20,7 +20,8 @@
 		border-color: var(--color-alert) !important;
 	}
 
-	&.disabled {
+	&.disabled,
+	&:has(textarea:disabled) {
 		cursor: not-allowed;
 		background-color: var(--bg-input-disabled);
 	}
