--- a/source-code/frontend/src/shared/ui/buttons/prev-next/ui/PrevNextButton.module.scss
+++ b/source-code/frontend/src/shared/ui/buttons/prev-next/ui/PrevNextButton.module.scss
@@ -2,39 +2,18 @@
 @use "@/styles/mixins/transition";
 @use "@/styles/mixins/interaction";
 @use "@/styles/mixins/mixins";
+@use "@/styles/mixins/button";
 
 .button {
 	width: convert.to-rem(42);
 	height: convert.to-rem(42);
 	border-radius: 50%;
 
-	background-color: var(--bg-button-1);
-	color: var(--fg-button-1);
-	border: 1px solid var(--bg-button-1);
-
 	@include transition.create(background-color, color, border-color);
 
 	@include mixins.flex-center;
 
-	@include interaction.hover {
-		background-color: var(--bg-button-1-hover);
-		color: var(--fg-button-1-hover);
-		border-color: var(--bg-button-1-hover);
-	}
-
-	@include interaction.active {
-		background-color: var(--bg-button-1-active);
-		color: var(--fg-button-1-active);
-		border-color: var(--bg-button-1-active);
-	}
-
-	@include interaction.disabled {
-		background-color: var(--bg-button-disabled) !important;
-		color: var(--fg-button-disabled) !important;
-		border-color: var(--bg-button-disabled) !important;
-
-		cursor: not-allowed;
-	}
+	@include button.button-1;
 
 	&.next {
 		transform: rotate(180deg);
