--- a/source-code/frontend/src/shared/ui/buttons/root/ui/RootButton.module.scss
+++ b/source-code/frontend/src/shared/ui/buttons/root/ui/RootButton.module.scss
@@ -1,7 +1,8 @@
 @use "@/styles/functions/convert";
 @use "@/styles/mixins/mixins";
-@use "@/styles/mixins/transition";
 @use "@/styles/mixins/interaction";
+@use "@/styles/mixins/transition";
+@use "@/styles/mixins/button";
 
 .button {
 	border: none;
@@ -17,8 +18,6 @@
 
 	@include mixins.flex-center;
 	flex-direction: row;
-
-	@include transition.create(background-color, color, border-color);
 
 	&.sm {
 		min-height: convert.to-rem(36);
@@ -36,65 +35,18 @@
 	}
 
 	&.var1 {
-		background-color: var(--bg-button-1);
-		color: var(--fg-button-1);
-		border: 1px solid var(--bg-button-1);
-
-		@include interaction.hover {
-			background-color: var(--bg-button-1-hover);
-			color: var(--fg-button-1-hover);
-			border-color: var(--bg-button-1-hover);
-		}
-
-		@include interaction.active {
-			background-color: var(--bg-button-1-active);
-			color: var(--fg-button-1-active);
-			border-color: var(--bg-button-1-active);
-		}
+		@include button.button-1;
 	}
 
 	&.var2 {
-		background-color: var(--bg-button-2);
-		color: var(--fg-button-2);
-		border: 1px solid var(--fg-button-2);
-
-		@include interaction.hover {
-			background-color: var(--bg-button-2-hover);
-			color: var(--fg-button-2-hover);
-			border-color: var(--bg-button-2-hover);
-		}
-
-		@include interaction.active {
-			background-color: var(--bg-button-2-active);
-			color: var(--fg-button-2-active);
-			border-color: var(--bg-button-2-active);
-		}
+		@include button.button-2;
 	}
 	&.var3 {
-		background-color: var(--bg-button-3);
-		color: var(--fg-button-3);
-
-		@include interaction.hover {
-			background-color: var(--bg-button-3-hover);
-			color: var(--fg-button-3-hover);
-		}
-
-		@include interaction.active {
-			background-color: var(--bg-button-3-active);
-			color: var(--fg-button-3-active);
-		}
+		@include button.button-3;
 	}
 
 	&.loading {
 		pointer-events: none;
-	}
-
-	@include interaction.disabled {
-		background-color: var(--bg-button-disabled) !important;
-		color: var(--fg-button-disabled) !important;
-		border-color: var(--bg-button-disabled) !important;
-
-		cursor: not-allowed;
 	}
 }
 
