--- a/source-code/frontend/src/shared/ui/fields/autocomplete-input/ui/list/AutocompleteList.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/autocomplete-input/ui/list/AutocompleteList.module.scss
@@ -4,8 +4,7 @@
 .list {
 	padding: 0;
 	border: 1px solid var(--color-input-border-focused);
-	border-radius: convert.to-rem(4);
-	max-height: convert.to-rem(300);
+	border-radius: convert.to-rem(var(--input-border-radius-number));
 	overflow: auto;
 	@include scrollbar.scrollbar;
 
