--- a/source-code/frontend/src/app/styles/default/root.scss
+++ b/source-code/frontend/src/app/styles/default/root.scss
@@ -96,6 +96,11 @@
 	// link disabled colors
 	--color-link-disabled: var(--color-gray-dark);
 
+	// accordion colors
+	--color-accordion-hover: var(--color-blue-medium);
+	--color-accordion-active: var(--color-blue-dark);
+	--color-accordion-border: var(--color-blue-medium);
+
 	// scrollbar colors
 	--color-scrollbar-track: transparent;
 	--color-scrollbar-thumb: var(--color-gray-dark);
