--- a/source-code/frontend/src/shared/ui/fields/input/ui/Input.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/input/ui/Input.module.scss
@@ -36,6 +36,7 @@
 		cursor: not-allowed;
 		color: var(--fg-input-disabled) !important;
 		background-color: var(--bg-input-disabled) !important;
+		opacity: 1;
 	}
 
 	&:-webkit-autofill,
