--- a/source-code/frontend/src/shared/ui/fields/autocomplete-input/ui/list/AutocompleteList.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/autocomplete-input/ui/list/AutocompleteList.module.scss
@@ -2,11 +2,9 @@
 @use "@/styles/mixins/scrollbar";
 @use "@/styles/mixins/typography";
 
-.list {
-	padding: 0;
+.wrap {
 	border: 1px solid var(--color-input-border-focused);
 	border-radius: convert.to-rem(var(--input-border-radius-number));
-	overflow: auto;
 
 	position: absolute;
 	left: 0;
@@ -16,8 +14,6 @@
 	visibility: visible;
 	opacity: 1;
 
-	@include scrollbar.scrollbar;
-
 	&.top {
 		bottom: 100%;
 	}
@@ -25,6 +21,10 @@
 	&.bottom {
 		top: 100%;
 	}
+}
+
+.list {
+	padding: 0;
 }
 
 .item {
