--- a/source-code/frontend/src/app/styles/select.scss
+++ b/source-code/frontend/src/app/styles/select.scss
@@ -5,7 +5,6 @@
 	&__control {
 		min-height: convert.to-rem(var(--input-height-number)) !important;
 		font-size: convert.to-rem(16) !important;
-		background-color: transparent !important;
 
 		border: 1px solid var(--color-input-border) !important;
 		border-radius: convert.to-rem(var(--input-border-radius-number)) !important;
@@ -13,6 +12,9 @@
 		transition: border-color var(--transition-duration) !important;
 		padding: 0 convert.to-rem(16) !important;
 		box-shadow: none !important;
+
+		background-color: var(--bg-input) !important;
+		color: var(--fg-input) !important;
 
 		&--menu-is-open {
 			.react-select__dropdown-indicator {
@@ -31,6 +33,12 @@
 		}
 	}
 
+	&__single-value {
+		&--is-disabled {
+			color: var(--fg-input-disabled) !important;
+		}
+	}
+
 	&__placeholder {
 		opacity: 1 !important;
 		color: var(--color-input-placeholder) !important;
@@ -40,12 +48,12 @@
 		transition:
 			transform var(--transition-duration),
 			color var(--transition-duration) !important;
-		color: var(--color-dropdown-indicator) !important;
+		color: var(--color-select-indicator) !important;
 		cursor: pointer !important;
 	}
 
 	&__clear-indicator {
-		color: var(--color-dropdown-indicator) !important;
+		color: var(--color-select-indicator) !important;
 		cursor: pointer !important;
 	}
 
@@ -81,7 +89,7 @@
 		display: flex !important;
 		align-items: center !important;
 		font-size: convert.to-rem(16) !important;
-		color: var(--foreground) !important;
+		color: var(--fg-input) !important;
 		border-bottom: 1px solid var(--color-input-border-focused) !important;
 		border-radius: 0 !important;
 
@@ -90,11 +98,11 @@
 		}
 
 		&--is-focused {
-			background-color: var(--color-option-focused) !important;
+			background-color: var(--color-select-option-bg-focused) !important;
 		}
 
 		&--is-selected {
-			background-color: var(--color-option-selected) !important;
+			background-color: var(--color-select-option-bg-selected) !important;
 		}
 	}
 }
