--- a/source-code/frontend/src/shared/ui/fields/autocomplete-input/ui/list/AutocompleteList.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/autocomplete-input/ui/list/AutocompleteList.module.scss
@@ -6,6 +6,8 @@
 	border: 1px solid var(--color-input-border-focused);
 	border-radius: convert.to-rem(var(--input-border-radius-number));
 
+	overflow: hidden;
+
 	position: absolute;
 	left: 0;
 	width: 100%;
@@ -35,6 +37,6 @@
 	@include typography.main-text;
 
 	&.focused {
-		background-color: var(--color-option-focused);
+		background-color: var(--color-select-option-bg-focused);
 	}
 }
