--- a/source-code/frontend/src/shared/ui/fields/textarea/ui/Textarea.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/textarea/ui/Textarea.module.scss
@@ -10,6 +10,9 @@
 	border-radius: convert.to-rem(var(--input-border-radius-number));
 	border: 1px solid var(--color-input-border);
 	padding: convert.to-rem(14) convert.to-rem(4) convert.to-rem(14) 0;
+
+	background-color: var(--bg-input);
+
 	@include transition.create(border-color);
 
 	&:has(.input:focus-visible) {
@@ -38,6 +41,10 @@
 	max-height: convert.to-rem(400);
 	border: none;
 	outline: none;
+
+	background-color: transparent;
+	color: var(--fg-input);
+
 	@include scrollbar.scrollbar;
 
 	&::-webkit-scrollbar-thumb {
