--- a/source-code/frontend/src/shared/ui/spinner/ui/Spinner.module.scss
+++ b/source-code/frontend/src/shared/ui/spinner/ui/Spinner.module.scss
@@ -3,8 +3,8 @@
 .spinner {
 	width: convert.to-rem(30);
 	height: convert.to-rem(30);
-	border: convert.to-rem(3) solid var(--bg-spinner);
-	border-bottom-color: var(--fg-spinner);
+	border: convert.to-rem(3) solid var(--color-bg-spinner);
+	border-bottom-color: var(--color-fg-spinner);
 	border-radius: 50%;
 	display: inline-block;
 	box-sizing: border-box;
