--- a/source-code/frontend/src/shared/ui/overlay/ui/Overlay.module.scss
+++ b/source-code/frontend/src/shared/ui/overlay/ui/Overlay.module.scss
@@ -7,7 +7,7 @@
 	left: 0;
 	width: 100vw;
 	height: 100%;
-	background-color: var(--bg-overlay);
+	background-color: var(--color-bg-overlay);
 	z-index: var(--z-index-modal);
 	visibility: hidden;
 	opacity: 0;
