--- a/source-code/frontend/src/app/styles/select.scss
+++ b/source-code/frontend/src/app/styles/select.scss
@@ -13,8 +13,8 @@
 		padding: 0 convert.to-rem(16) !important;
 		box-shadow: none !important;
 
-		background-color: var(--bg-input) !important;
-		color: var(--fg-input) !important;
+		background-color: var(--color-bg-input) !important;
+		color: var(--color-fg-input) !important;
 
 		&--menu-is-open {
 			.react-select__dropdown-indicator {
@@ -29,13 +29,13 @@
 		}
 
 		&--is-disabled {
-			background-color: var(--bg-input-disabled) !important;
+			background-color: var(--color-bg-input-disabled) !important;
 		}
 	}
 
 	&__single-value {
 		&--is-disabled {
-			color: var(--fg-input-disabled) !important;
+			color: var(--color-fg-input-disabled) !important;
 		}
 	}
 
@@ -72,7 +72,7 @@
 	&__menu {
 		border-radius: convert.to-rem(var(--input-border-radius-number)) !important;
 		border: 1px solid var(--color-input-border-focused) !important;
-		background-color: var(--bg-input) !important;
+		background-color: var(--color-bg-input) !important;
 		margin-top: 0 !important;
 	}
 
@@ -89,7 +89,7 @@
 		display: flex !important;
 		align-items: center !important;
 		font-size: convert.to-rem(16) !important;
-		color: var(--fg-input) !important;
+		color: var(--color-fg-input) !important;
 		border-bottom: 1px solid var(--color-input-border-focused) !important;
 		border-radius: 0 !important;
 
