--- a/source-code/frontend/src/features/modal/ui/Modal.module.scss
+++ b/source-code/frontend/src/features/modal/ui/Modal.module.scss
@@ -1,5 +1,5 @@
-@use "@/styles/functions/convert";
-@use "@/styles/mixins/breakpoints";
+@use "$styles/functions/convert";
+@use "$styles/mixins/breakpoints";
 
 .wrap {
 	background-color: var(--background);
