--- a/source-code/frontend/src/shared/styles/mixins/_button.scss
+++ b/source-code/frontend/src/shared/styles/mixins/_button.scss
@@ -1,5 +1,5 @@
-@use "@/styles/mixins/interaction";
-@use "@/styles/mixins/transition";
+@use "$styles/mixins/interaction";
+@use "$styles/mixins/transition";
 
 @mixin button-disabled {
 	@include interaction.disabled {
