--- a/source-code/frontend/src/shared/ui/fields/file/ui/preview/FileInputPreview.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/file/ui/preview/FileInputPreview.module.scss
@@ -1,5 +1,5 @@
-@use "@/styles/functions/convert";
-@use "@/styles/mixins/typography";
+@use "$styles/functions/convert";
+@use "$styles/mixins/typography";
 
 .previewBlock {
 	margin-top: convert.to-rem(4);
