--- a/source-code/frontend/src/shared/ui/fields/input-controls/ui/InputControls.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/input-controls/ui/InputControls.module.scss
@@ -1,5 +1,5 @@
-@use "@/styles/functions/convert";
-@use "@/styles/mixins/mixins";
+@use "$styles/functions/convert";
+@use "$styles/mixins/mixins";
 
 .buttons {
 	position: absolute;
