--- a/source-code/frontend/src/shared/ui/pagination/ui/root/Pagination.module.scss
+++ b/source-code/frontend/src/shared/ui/pagination/ui/root/Pagination.module.scss
@@ -1,7 +1,7 @@
-@use "@/styles/mixins/mixins";
-@use "@/styles/functions/convert";
-@use "@/styles/mixins/interaction";
-@use "@/styles/mixins/breakpoints";
+@use "$styles/mixins/mixins";
+@use "$styles/functions/convert";
+@use "$styles/mixins/interaction";
+@use "$styles/mixins/breakpoints";
 
 .pagination {
 	display: flex;
