--- a/source-code/frontend/src/shared/ui/tooltip/ui/Tooltip.module.scss
+++ b/source-code/frontend/src/shared/ui/tooltip/ui/Tooltip.module.scss
@@ -1,8 +1,8 @@
-@use "@/styles/functions/convert";
-@use "@/styles/mixins/mixins";
-@use "@/styles/mixins/breakpoints";
-@use "@/styles/mixins/typography";
-@use "@/styles/mixins/transition";
+@use "$styles/functions/convert";
+@use "$styles/mixins/mixins";
+@use "$styles/mixins/breakpoints";
+@use "$styles/mixins/typography";
+@use "$styles/mixins/transition";
 
 .wrap {
 	position: relative;
