--- a/source-code/frontend/src/widgets/burger/ui/Burger.module.scss
+++ b/source-code/frontend/src/widgets/burger/ui/Burger.module.scss
@@ -1,6 +1,6 @@
-@use "@/styles/functions/convert";
-@use "@/styles/mixins/transition";
-@use "@/styles/mixins/mixins";
+@use "$styles/functions/convert";
+@use "$styles/mixins/transition";
+@use "$styles/mixins/mixins";
 
 .block {
 	z-index: var(--z-index-burger);
