--- a/source-code/frontend/src/features/accordion/ui/item/AccordionItem.module.scss
+++ b/source-code/frontend/src/features/accordion/ui/item/AccordionItem.module.scss
@@ -1,8 +1,8 @@
-@use "@/styles/functions/convert";
-@use "@/styles/mixins/mixins";
-@use "@/styles/mixins/transition";
-@use "@/styles/mixins/interaction";
-@use "@/styles/mixins/typography";
+@use "$styles/functions/convert";
+@use "$styles/mixins/mixins";
+@use "$styles/mixins/transition";
+@use "$styles/mixins/interaction";
+@use "$styles/mixins/typography";
 
 .block {
 	border-top: 1px solid var(--color-accordion-border);
