--- a/source-code/frontend/src/shared/styles/mixins/_typography.scss
+++ b/source-code/frontend/src/shared/styles/mixins/_typography.scss
@@ -1,7 +1,7 @@
-@use "@/styles/functions/convert";
-@use "@/styles/mixins/breakpoints";
-@use "@/styles/mixins/transition";
-@use "@/styles/mixins/interaction";
+@use "$styles/functions/convert";
+@use "$styles/mixins/breakpoints";
+@use "$styles/mixins/transition";
+@use "$styles/mixins/interaction";
 
 @mixin h1() {
 	font-weight: 400;
