--- a/source-code/frontend/src/shared/ui/breadcrumbs/ui/item/BreadcrumbsItem.module.scss
+++ b/source-code/frontend/src/shared/ui/breadcrumbs/ui/item/BreadcrumbsItem.module.scss
@@ -1,5 +1,5 @@
-@use "@/styles/functions/convert";
-@use "@/styles/mixins/typography";
+@use "$styles/functions/convert";
+@use "$styles/mixins/typography";
 
 .item {
 	opacity: 0.8;
