--- a/source-code/frontend/src/shared/ui/buttons/prev-next/ui/PrevNextButton.module.scss
+++ b/source-code/frontend/src/shared/ui/buttons/prev-next/ui/PrevNextButton.module.scss
@@ -1,8 +1,8 @@
-@use "@/styles/functions/convert";
-@use "@/styles/mixins/transition";
-@use "@/styles/mixins/interaction";
-@use "@/styles/mixins/mixins";
-@use "@/styles/mixins/button";
+@use "$styles/functions/convert";
+@use "$styles/mixins/transition";
+@use "$styles/mixins/interaction";
+@use "$styles/mixins/mixins";
+@use "$styles/mixins/button";
 
 .button {
 	width: convert.to-rem(42);
