--- a/source-code/frontend/src/shared/ui/fields/autocomplete-input/ui/list/AutocompleteList.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/autocomplete-input/ui/list/AutocompleteList.module.scss
@@ -1,6 +1,6 @@
-@use "@/styles/functions/convert";
-@use "@/styles/mixins/scrollbar";
-@use "@/styles/mixins/typography";
+@use "$styles/functions/convert";
+@use "$styles/mixins/scrollbar";
+@use "$styles/mixins/typography";
 
 .wrap {
 	border: 1px solid var(--color-input-border-focused);
