--- a/source-code/frontend/src/shared/ui/form/form-wrapper/ui/FormWrapper.module.scss
+++ b/source-code/frontend/src/shared/ui/form/form-wrapper/ui/FormWrapper.module.scss
@@ -1,5 +1,5 @@
-@use "@/styles/functions/convert";
-@use "@/styles/mixins/breakpoints";
+@use "$styles/functions/convert";
+@use "$styles/mixins/breakpoints";
 
 .block {
 	max-width: convert.to-rem(360);
