--- a/source-code/frontend/src/shared/ui/overlay/ui/Overlay.module.scss
+++ b/source-code/frontend/src/shared/ui/overlay/ui/Overlay.module.scss
@@ -1,5 +1,5 @@
-@use "@/styles/mixins/mixins";
-@use "@/styles/mixins/transition";
+@use "$styles/mixins/mixins";
+@use "$styles/mixins/transition";
 
 .overlay {
 	position: fixed;
