--- a/source-code/frontend/src/shared/ui/social/ui/Social.module.scss
+++ b/source-code/frontend/src/shared/ui/social/ui/Social.module.scss
@@ -1,6 +1,6 @@
-@use "@/styles/functions/convert";
-@use "@/styles/mixins/mixins";
-@use "@/styles/mixins/button";
+@use "$styles/functions/convert";
+@use "$styles/mixins/mixins";
+@use "$styles/mixins/button";
 
 .block {
 	display: flex;
