--- a/source-code/frontend/src/widgets/header/ui/navbar/HeaderNavbar.module.scss
+++ b/source-code/frontend/src/widgets/header/ui/navbar/HeaderNavbar.module.scss
@@ -1,5 +1,5 @@
-@use "@/styles/functions/convert";
-@use "@/styles/mixins/breakpoints";
+@use "$styles/functions/convert";
+@use "$styles/mixins/breakpoints";
 
 .block {
 	display: none;
